# libghostty-py

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  hatch_build.py  pyproject.toml
examples/: ghostling.py
libghostty-vt/: README.md  hatch_build.py  pyproject.toml
libghostty-vt/src/libghostty_vt/: build_info.py  errors.py  key.py  mouse.py  osc.py  paste.py  render.py  sgr.py  stubs.pyi  terminal.py
scripts/: fetch_cdef.py  generate_stubs.py
src/libghostty/: __init__.py  _ffi.py  build_info.py  key.py  mouse.py  osc.py  paste.py  render.py  sgr.py  terminal.py
src/libghostty/_cffi/: _ffi.py  _ffi.pyi  cdef.h  types.pyi
src/libghostty/vt/: __init__.py  build_info.py  errors.py  key.py  mouse.py  osc.py  paste.py  render.py  sgr.py  stubs.pyi  terminal.py
tests/: test_cdef.py
