[project]
name = "libghostty-py"
version = "0.1.0"
description = "Python bindings for libghostty-vt"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "libghostty-cffi",
    "libghostty-vt",
]

[project.optional-dependencies]
examples = ["PyQt6>=6.6"]

[tool.uv.sources]
libghostty-cffi = { workspace = true }
libghostty-vt = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "hatchling>=1.29.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
