[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libghostty"
version = "0.1.0"
description = "Python bindings for libghostty-vt"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Uzair Aftab", email = "git@uzaaft.me" },
  { name = "trag1c", email = "dev@jakubr.me" },
]
dependencies = [
  "cffi>=1.17",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[project.optional-dependencies]
examples = ["PyQt6>=6.6"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "mypy>=1.20.1",
  "hatchling>=1.29.0",
]


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"examples/ghostling.py" = ["N802"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
