[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libghostty"
version = "0.1.0"
description = "Python bindings for libghostty"
license = "MIT"
readme = "README.md"
authors = [
  { name = "Uzair Aftab", email = "git@uzaaft.me" },
  { name = "trag1c", email = "dev@jakubr.me" },
]
requires-python = ">=3.10"
dependencies = [
  "libghostty-vt",
]

[tool.uv.sources]
libghostty-vt = { workspace = true }

[tool.uv.workspace]
members = ["libghostty-vt"]

[tool.libghostty]
ghostty-repository = "https://github.com/ghostty-org/ghostty"
ghostty-commit = "b0f8276658fbcc75318d2125d40146074a3fc505"

[project.optional-dependencies]
examples = ["PyQt6>=6.6"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "mypy>=1.20.1",
  "hatchling>=1.29.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"examples/ghostling.py" = ["N802"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
